<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SerachActivity">

    <RelativeLayout
        android:id="@+id/searchRelative"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/wks_bg">

        <ImageView
            android:id="@+id/backIv"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_5"
            android:src="@drawable/icon_back_32px" />


        <EditText
            android:id="@+id/searchEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toLeftOf="@+id/searchTv"
            android:layout_toRightOf="@id/backIv"
            android:background="@drawable/bg_titlebar_text"
            android:hint="发现更多干货"
            android:paddingBottom="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_40"
            android:paddingTop="@dimen/dp_10"
            android:textSize="@dimen/sp_16"
            android:transitionName="@string/share_edit" />

        <ImageView
            android:id="@+id/searchIv"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_60"
            android:src="@mipmap/ic_search"
            android:transitionName="@string/share_image" />

        <TextView
            android:id="@+id/searchTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/sp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="搜索"
            android:textColor="@color/whiteAlways"
            android:textSize="@dimen/sp_18" />


    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/searchScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:visibility="visible"
        android:layout_below="@id/searchRelative"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_8"
                android:text="@string/search_hot"
                android:textColor="@color/yellow"
                android:textSize="@dimen/sp_16" />

            <com.zhy.view.flowlayout.TagFlowLayout
                android:id="@+id/searchHotFlowLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:max_select="0" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24">

                <ImageView
                    android:id="@+id/searchClearAllIv"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_alignBottom="@id/searchClearAllIv"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="0dp"
                    android:src="@mipmap/ic_search_clear" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/searchClearAllIv"
                    android:text="@string/search_history"
                    android:textColor="@color/wks_bg"
                    android:textSize="@dimen/sp_16" />
            </RelativeLayout>

            <TextView
                android:id="@+id/searchHistoryEmptyTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_20"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/search_history_empty"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/searchHistoryRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                tools:listitem="@layout/item_search_history"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>